--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,19 @@
 /* GLOBAL */
+:root {
+  --text-color1: rgb(136, 136, 136);
+  --bg-color: rgb(41, 63, 80);
+  --text-color-white: rgb(255, 255, 255);
+  --text-white: rgba(255, 255, 255, 0.445);
+  --text-color2: rgb(100, 136, 128);
+  --text-color3: #648880;
+  --main-content-title: #a9b2b9;
+}
+
+*:focus {
+  outline: 2px solid var(--bg-color);
+  outline-offset: 2px;
+}
+
 * {
   box-sizing: border-box;
 }
@@ -12,9 +27,9 @@ body {
   flex-direction: column;
   margin: 0;
   padding: 0;
-  font-family: 'Roboto', sans-serif;
+  font-family: Lato, "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight: 400;
-  font-size: 18px;
+  font-size: 16px;
   line-height: 27px;
   letter-spacing: 2px;
   height: 100%;
@@ -30,7 +45,169 @@ body {
   margin-right: auto;
 }
 
-/* MAIN */
+.site-header {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: rgb(41, 63, 80);
+}
+
+.header-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding-bottom: 100px;
+}
+.site-logo-link {
+  text-decoration: none;
+  color: var(--text-white);
+  font-size: 48px;
+  font-weight: 100;
+  letter-spacing: 0.5px;
+  line-height: 44px;
+  text-transform: uppercase;
+}
+.site-logo-link:hover {
+  opacity: 0.8;
+}
+
+.site-logo-link:active {
+  opacity: 0.6;
+}
+
+.sitenav-list {
+  display: flex;
+  align-items: center;
+}
+.sitenav-item {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+.sitenav-item:not(:last-child) {
+  margin-right: 50px;
+}
+
+.sitenav-link {
+  color: var(--text-color-white);
+  text-decoration: none;
+  font-size: 14px;
+  font-weight: 400;
+  letter-spacing: 0.5px;
+  text-transform: uppercase;  
+  transition: 0.2s ease;
+}
+.sitenav-link:hover {
+  color: var(--text-color3);
+  border-bottom: 2px solid var(--text-color3);
+}
+.sitenav-link:active {
+  opacity: 0.6;
+}
+.sitenav-text {
+  text-align: right;
+  color: var(--text-color3);
+  font-size: 18px;
+}
+
+.site-header-info {
+  text-align: center;
+  color: var(--text-white);
+  margin-bottom: 22px;
+}
+.site-header-info>span {
+  font-size: 36px;
+  color: var(--text-color3);
+}
+
+.site-header-link:hover {
+  background-color: var(--text-color-white);
+  color: var(--bg-color);
+}
+
+.site-header-link:active {
+  opacity: 0.6;
+}
+
+.site-header-link {
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 40px;
+}
+.btn-button {
+  display: block;
+  text-decoration: none;
+  color: var(--text-color-white);
+  font-size: 16px;
+  padding: 20px 30px;
+  border: 2px solid var(--text-color-white);
+  text-align: center;
+  width: 220px;
+  border-radius: 6px;
+  justify-content: center;
+  transition: 0.4s ease;
+}
+/* MAIN CONTENT */
 .main-content {
   flex-grow: 1;
 }
+
+.main-action-list {
+  display: flex;
+  justify-content: space-between;
+  margin: 0;
+  padding: 0;
+}
+
+.main-action-item{
+  list-style-type: none;
+}
+.main-action-item:not(:last-child) {
+  margin-right: 50px;
+}
+
+.main-action-title {
+  font-size: 16px;
+  color: var(--main-content-title);
+  margin-bottom: 22px;
+  margin-top: 80px;
+}
+
+.main-action-link {
+  text-decoration: none;
+}
+
+.main-action-img {
+  border-radius: 8px;
+}
+
+.main-action-heading {
+  font-size: 21px;
+  color: var(--text-color3);
+  margin-bottom: 22px;
+}
+.main-action-heading:hover {
+  opacity: 0.6;
+}
+.main-action-text {
+  width: 380px;
+  margin-bottom: 22px;
+  font-size: 16px;
+  color: #888;
+}
+
+/* FOOTER */
+
+.site-footer {
+  background-color: var(--bg-color);
+}
+.site-logo-footer {
+  font-size: 14px;
+  color: var(--text-color3);
+}
+
+.footer-container {
+  /* align-items: center; */
+  margin-top: 50px;
+  margin-bottom: 0;
+}
+
